my first homework

--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice</title>
+  <title>MFW Bootstrap Page. Homework 1</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Practice</h1>
-        <h3>Minimum Requirements:</h3>
-        <ul>
-          <li>Create a New Branch</li>
-          <li>Add your name</li>
-          <li>Tell me about yourself</li>
-          <li>Save and push to your branch</li>
-          <li>BONUS: Style the page however you'd like</li>
-        </ul>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <h1>[YOUR NAME]</h1>
-      </div>
-      <div class="col-md-9">
-        <h3>[YOUR STORY]</h3>
-      </div>
-    </div>
+<div class="jumbotron text-center">
+  <h1>My First MFW Homework Assignment, Bootstrap Page</h1>
   </div>
+  
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Who Am I</I></h3>
+      <p>Hello Jacque, my name is James Michael McCullough, I go by Mike though</p>
+      </div>
+    <div class="col-sm-4">
+      <h3>Why I'm Here</h3>
+      <p>I will be 62 in April. I used to work for an Architect as a Construction Manager. I had several brain injuries over the last few years and am no longer able to do what I used to. I have always had an interest in computers and technology and would have went in to programming when I was young if it had been a normal career path then.  I am hoping to come away from these classes with a new career.</p>
+      </div>
+    <div class="col-sm-4">
+      <h3>What's Next</h3>        
+      <p> It took quite a bit of work to get the homework done but here it is. I look forward to this class, thank you for all your help so far, see you tonight</p>
+     </div>
+  </div>
+</div>
 
-  <!-- start of javascript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-</body>
-</html>
