--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>My First MFW Homework Assignment, Bootstrap Page</h1>
+  <h1>My First MFW Homework Assignment, Bootstrap Page, first mod</h1>
   </div>
   
 <div class="container">
